--- a/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.admin.base.scss
+++ b/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.admin.base.scss
@@ -315,7 +315,8 @@ table td a.tabledrag-handle {
             &:after {
               content: 'S';
               font-family: oxbow-paragraphs;
-              @include fill(2px);
+              @include fill;
+              @include flex(center, center);
               font-size: 18px;
               color: white;
               line-height: 1;
