--- a/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.image.scss
+++ b/web/modules/custom/oxbow_paragraphs/sass/_oxbow_paragraphs.image.scss
@@ -17,6 +17,10 @@
   figure {
     display: inline-block;
     margin: 0 auto;
+    
+    &[data-open] {
+      cursor: pointer;
+    }
   }
   
   figcaption {
