--- a/web/themes/integral/css/screen.css
+++ b/web/themes/integral/css/screen.css
@@ -315,13 +315,40 @@ body.path-node > .layout-container > .region-pre-content {
   min-width: 300px;
 }
 /* line 134, ../sass/editor/_group--header.scss */
+.node__edit .group__header .node__actions .node__advanced .field--name-field-title-display {
+  margin-bottom: 0.375rem;
+  padding: 0.375rem;
+  background: white;
+}
+/* line 139, ../sass/editor/_group--header.scss */
+.node__edit .group__header .node__actions .node__advanced .field--name-field-title-display .form-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+/* line 143, ../sass/editor/_group--header.scss */
+.node__edit .group__header .node__actions .node__advanced .field--name-field-title-display label {
+  font-weight: bold;
+}
+/* line 147, ../sass/editor/_group--header.scss */
+.node__edit .group__header .node__actions .node__advanced .field--name-field-title-display input {
+  width: 1.5em;
+  height: 1.5em;
+  margin-right: .5em;
+}
+/* line 155, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__advanced .node__unpublish,
 .node__edit .group__header .node__actions .node__advanced .node__publish,
 .node__edit .group__header .node__actions .node__advanced .node__delete {
   position: absolute;
   bottom: 0.375rem;
 }
-/* line 140, ../sass/editor/_group--header.scss */
+/* line 161, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__advanced .node__unpublish .btn::after,
 .node__edit .group__header .node__actions .node__advanced .node__publish .btn::after,
 .node__edit .group__header .node__actions .node__advanced .node__delete .btn::after {
@@ -340,43 +367,43 @@ body.path-node > .layout-container > .region-pre-content {
   width: 100%;
   height: 2.25rem;
 }
-/* line 146, ../sass/editor/_group--header.scss */
+/* line 167, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__advanced .node__unpublish,
 .node__edit .group__header .node__actions .node__advanced .node__publish {
   left: 0.375rem;
   right: 50%;
   padding-right: 0.1875rem;
 }
-/* line 152, ../sass/editor/_group--header.scss */
+/* line 173, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__advanced .node__delete {
   left: 50%;
   right: 0.375rem;
   padding-left: 0.1875rem;
 }
-/* line 162, ../sass/editor/_group--header.scss */
+/* line 183, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__unpublish .btn:after {
   content: 'Unpublish';
   background: #0eb1ff;
 }
-/* line 167, ../sass/editor/_group--header.scss */
+/* line 188, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__unpublish .btn + * {
   display: none;
 }
-/* line 175, ../sass/editor/_group--header.scss */
+/* line 196, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__publish .btn:after {
   content: 'Publish';
   background: #0eb1ff;
 }
-/* line 180, ../sass/editor/_group--header.scss */
+/* line 201, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__publish .btn + * {
   display: none;
 }
-/* line 188, ../sass/editor/_group--header.scss */
+/* line 209, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__delete .btn:after {
   content: 'Delete';
   background: #b01030;
 }
-/* line 193, ../sass/editor/_group--header.scss */
+/* line 214, ../sass/editor/_group--header.scss */
 .node__edit .group__header .node__actions .node__delete .btn + * {
   display: none;
 }
