--- a/web/themes/starter/css/screen.css
+++ b/web/themes/starter/css/screen.css
@@ -5,9 +5,8 @@
  * foundation.zurb.com
  * Licensed under MIT Open Source
  */
-@import url("http://fonts.googleapis.com/css?family=Bitter:400,700|Roboto+Condensed:400,700,300");
 @import url("https://fonts.googleapis.com/css?family=Oxygen+Mono");
-@import url("https://fonts.googleapis.com/css?family=Anton|Arsenal");
+@import url("https://fonts.googleapis.com/css?family=Francois+One|Nunito+Sans");
 @font-face {
   font-family: 'oxbow';
   src: url("../fonts/fontello-oxbow/font/oxbow.eot?");
@@ -472,7 +471,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #555555;
@@ -2005,7 +2004,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arsenal, Helvetica;
+  font-family: "Francois One", Times, Baskerville, Georgia, serif;
   font-weight: normal;
   font-style: normal;
   color: inherit;
@@ -2088,14 +2087,14 @@ h6 {
 }
 /* line 317, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a {
-  color: #DD6011;
+  color: #6EBE6E;
   text-decoration: none;
   line-height: inherit;
   cursor: pointer;
 }
 /* line 323, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a:hover, a:focus {
-  color: #be530f;
+  color: #51b151;
 }
 /* line 331, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a img {
@@ -3686,7 +3685,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: #DD6011 transparent transparent;
+  border-color: #6EBE6E transparent transparent;
   border-top-style: solid;
   border-bottom-width: 0;
   right: 5px;
@@ -3726,7 +3725,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent #DD6011 transparent transparent;
+  border-color: transparent #6EBE6E transparent transparent;
   border-right-style: solid;
   border-left-width: 0;
 }
@@ -3737,7 +3736,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #DD6011;
+  border-color: transparent transparent transparent #6EBE6E;
   border-left-style: solid;
   border-right-width: 0;
 }
@@ -3766,7 +3765,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #DD6011 transparent transparent;
+    border-color: #6EBE6E transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -3798,7 +3797,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #DD6011 transparent transparent;
+    border-color: transparent #6EBE6E transparent transparent;
     border-right-style: solid;
     border-left-width: 0;
   }
@@ -3809,7 +3808,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #DD6011;
+    border-color: transparent transparent transparent #6EBE6E;
     border-left-style: solid;
     border-right-width: 0;
   }
@@ -3839,7 +3838,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #DD6011 transparent transparent;
+    border-color: #6EBE6E transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -3871,7 +3870,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #DD6011 transparent transparent;
+    border-color: transparent #6EBE6E transparent transparent;
     border-right-style: solid;
     border-left-width: 0;
   }
@@ -3882,7 +3881,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #DD6011;
+    border-color: transparent transparent transparent #6EBE6E;
     border-left-style: solid;
     border-right-width: 0;
   }
@@ -3953,7 +3952,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent #DD6011 transparent transparent;
+  border-color: transparent #6EBE6E transparent transparent;
   border-right-style: solid;
   border-left-width: 0;
 }
@@ -3964,7 +3963,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #DD6011;
+  border-color: transparent transparent transparent #6EBE6E;
   border-left-style: solid;
   border-right-width: 0;
 }
@@ -5527,7 +5526,7 @@ html, body {
 
 /* line 6, ../sass/layout/_header.scss */
 #header {
-  background: #DDDDDD;
+  background: #8B3A7E;
   position: relative;
   padding-top: 3.75rem;
 }
@@ -5539,7 +5538,7 @@ html, body {
   top: 0;
   z-index: 100;
   height: 3.75rem;
-  background: #DDDDDD;
+  background: #8B3A7E;
   padding: 0.75rem 1.5rem;
 }
 /* line 22, ../sass/layout/_header.scss */
@@ -5585,7 +5584,7 @@ body.toolbar-fixed.toolbar-vertical.toolbar-tray-open #header #header-top {
 
 /* line 2, ../sass/layout/_footer.scss */
 #footer {
-  background: #333333;
+  background: #C55252;
 }
 /* line 5, ../sass/layout/_footer.scss */
 #footer > .layout-container {
@@ -5599,7 +5598,7 @@ body.toolbar-fixed.toolbar-vertical.toolbar-tray-open #header #header-top {
 }
 /* line 14, ../sass/layout/_footer.scss */
 #footer #block-copyrightblock * {
-  color: #666666;
+  color: #df9e9e;
 }
 /* line 18, ../sass/layout/_footer.scss */
 #footer * + #block-copyrightblock {
@@ -5631,39 +5630,6 @@ body.toolbar-fixed.toolbar-vertical.toolbar-tray-open #header #header-top {
   content: '\0079';
 }
 
-@font-face {
-  font-family: 'oxbow';
-  src: url("../fonts/fontello-oxbow/font/oxbow.eot?");
-  src: url("../fonts/fontello-oxbow/font/oxbow.eot?#iefix") format("embedded-opentype"), url("../fonts/fontello-oxbow/font/oxbow.woff") format("woff"), url("../fonts/fontello-oxbow/font/oxbow.ttf") format("truetype"), url("../fonts/fontello-oxbow/font/oxbow.svg#oxbow") format("svg");
-  font-weight: bold;
-  font-weight: normal;
-  font-style: normal;
-}
-/* line 15, ../sass/components/typography/_fonts.scss */
-.fs-s {
-  font-size: 0.75rem;
-}
-
-/* line 18, ../sass/components/typography/_fonts.scss */
-.fs-m {
-  font-size: 100%;
-}
-
-/* line 21, ../sass/components/typography/_fonts.scss */
-.fs-l {
-  font-size: 31;
-}
-
-/* line 24, ../sass/components/typography/_fonts.scss */
-.fs-xl {
-  font-size: 40;
-}
-
-/* line 27, ../sass/components/typography/_fonts.scss */
-.fs-xxl {
-  font-size: 48;
-}
-
 /* line 2, ../sass/components/typography/_text.scss */
 #block-starter-page-title {
   text-align: center;
@@ -5673,19 +5639,39 @@ body.toolbar-fixed.toolbar-vertical.toolbar-tray-open #header #header-top {
   margin-bottom: 0.75rem;
 }
 
-/* line 10, ../sass/components/typography/_text.scss */
-h1 {
-  font-weight: bold;
-}
-
 /* line 14, ../sass/components/typography/_text.scss */
 h3, h4, h5, h6 {
-  font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* line 20, ../sass/components/typography/_text.scss */
 [class*='field--type-text'] a {
   border-bottom: 1px solid;
+}
+
+/* line 25, ../sass/components/typography/_text.scss */
+.fs-s {
+  font-size: 0.75rem;
+}
+
+/* line 28, ../sass/components/typography/_text.scss */
+.fs-m {
+  font-size: 100%;
+}
+
+/* line 31, ../sass/components/typography/_text.scss */
+.fs-l {
+  font-size: 31;
+}
+
+/* line 34, ../sass/components/typography/_text.scss */
+.fs-xl {
+  font-size: 40;
+}
+
+/* line 37, ../sass/components/typography/_text.scss */
+.fs-xxl {
+  font-size: 48;
 }
 
 /* line 2, ../sass/components/typography/_tables.scss */
@@ -5717,7 +5703,7 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #DD6011;
+  background-color: #6EBE6E;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5734,7 +5720,7 @@ table caption {
 .button-default:hover, .button-default:focus,
 .button-primary:hover,
 .button-primary:focus {
-  background-color: #b14d0e;
+  background-color: #4aa64a;
   color: white;
 }
 
@@ -5752,7 +5738,7 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #555555;
+  background-color: #8B3A7E;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5766,7 +5752,7 @@ table caption {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .button-secondary:hover, .button-secondary:focus {
-  background-color: #444444;
+  background-color: #6f2e65;
   color: white;
 }
 
@@ -5784,10 +5770,10 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #AAAAAA;
-  color: #555555;
+  background-color: #C55252;
+  color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
-  color: #555555 !important;
+  color: white !important;
   padding: 0.75rem;
   margin-bottom: 0;
   border-bottom: none !important;
@@ -5798,8 +5784,8 @@ table caption {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .button-tertiary:hover, .button-tertiary:focus {
-  background-color: #888888;
-  color: #555555;
+  background-color: #a73838;
+  color: white;
 }
 
 /* line 56, ../sass/components/buttons/_buttons.scss */
@@ -5816,8 +5802,8 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  border: 1px solid #DD6011;
-  color: #DD6011;
+  border: 1px solid #6EBE6E;
+  color: #6EBE6E;
   padding: 0.75rem;
   margin-bottom: 0;
 }
@@ -5831,8 +5817,8 @@ table caption {
 }
 /* line 144, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .button-outline:hover, .button-outline:focus {
-  border-color: #6f3009;
-  color: #6f3009;
+  border-color: #2e682e;
+  color: #2e682e;
 }
 
 /* line 17, ../sass/components/forms/_forms.scss */
@@ -5849,7 +5835,7 @@ form .form-submit {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #DD6011;
+  background-color: #6EBE6E;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5862,7 +5848,7 @@ form .form-submit {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 form .form-submit:hover, form .form-submit:focus {
-  background-color: #b14d0e;
+  background-color: #4aa64a;
   color: white;
 }
 /* line 29, ../sass/components/forms/_forms.scss */
@@ -6043,7 +6029,7 @@ form .form-item.webform-component-time .form-radios {
 .form-type-number input:valid:not(.is-empty) ~ label {
   top: 0;
   font-size: .6em;
-  color: #DD6011;
+  color: #6EBE6E;
 }
 /* line 187, ../sass/components/forms/_forms.scss */
 .form-type-textfield .form-bar:before,
@@ -6059,7 +6045,7 @@ form .form-item.webform-component-time .form-radios {
   top: 3rem;
   height: 2px;
   width: 0;
-  background: #DD6011;
+  background: #6EBE6E;
   transition: all .3s;
 }
 /* line 197, ../sass/components/forms/_forms.scss */
@@ -6153,13 +6139,13 @@ form .form-item.webform-component-time .form-radios {
 /* line 26, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li a {
   background: transparent;
-  color: #DD6011;
+  color: white;
   padding: 0.375rem;
   border-bottom: 2px solid transparent;
 }
 /* line 32, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li a.is-active {
-  border-bottom: 2px solid #DD6011;
+  border-bottom: 2px solid white;
 }
 /* line 39, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li.open:before {
@@ -6172,7 +6158,7 @@ form .form-item.webform-component-time .form-radios {
   margin-left: -0.75rem;
   margin-top: 5px;
   transform: rotate(45deg);
-  background: #c4c4c4;
+  background: #6EBE6E;
 }
 /* line 54, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li ul {
@@ -6183,7 +6169,7 @@ form .form-item.webform-component-time .form-radios {
   min-width: 6.25rem;
   transform: translateX(-50%);
   margin: 0;
-  background-color: #c4c4c4;
+  background-color: #6EBE6E;
   margin-top: 0.75rem;
 }
 /* line 66, ../sass/components/menu/_menu--desktop.scss */
@@ -6201,15 +6187,15 @@ form .form-item.webform-component-time .form-radios {
   width: 100%;
   border-bottom: none !important;
   padding: 0.75rem;
-  color: #DD6011;
+  color: white;
 }
 /* line 81, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li ul li a:hover {
-  background: #b7b7b7;
+  background: #459a45;
 }
 /* line 85, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li ul li a.is-active {
-  background: #aaaaaa;
+  background: #3d893d;
   color: white;
 }
 /* line 93, ../sass/components/menu/_menu--desktop.scss */
@@ -6263,7 +6249,7 @@ form .form-item.webform-component-time .form-radios {
   top: 3.75rem;
   position: fixed;
   z-index: 1001;
-  background: #DD6011;
+  background: #8B3A7E;
   padding: 1.5rem;
   display: none;
 }
@@ -6350,7 +6336,7 @@ form .form-item.webform-component-time .form-radios {
 }
 /* line 11, ../sass/components/menu/_menu--footer.scss */
 #block-starter-footer .menu li a {
-  color: gray;
+  color: rgba(255, 255, 255, 0.8);
   padding: 0;
 }
 
@@ -6387,7 +6373,7 @@ form .form-item.webform-component-time .form-radios {
 }
 /* line 11, ../sass/components/menu/_menu--social.scss */
 #block-socialmedia .menu li a {
-  color: gray;
+  color: rgba(255, 255, 255, 0.8);
   padding: 0;
   font-size: 0;
 }
@@ -6719,7 +6705,7 @@ body.path-user .field--name-user-picture {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #DD6011;
+  background-color: #6EBE6E;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -6732,7 +6718,7 @@ body.path-user .field--name-user-picture {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .node.node--view-mode-teaser .links .node-readmore a:hover, .node.node--view-mode-teaser .links .node-readmore a:focus {
-  background-color: #b14d0e;
+  background-color: #4aa64a;
   color: white;
 }
 
@@ -6750,6 +6736,9 @@ body.page-node-type-content-page #content-main #block-starter-page-title {
   margin: 0 auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+/* line 17, ../sass/components/node/_node--content-page.scss */
+body.page-node-type-content-page #content-main #block-starter-page-title h1 {
   padding-top: 1.5rem;
 }
 
