--- a/web/themes/starter/sass/global/_colors.scss
+++ b/web/themes/starter/sass/global/_colors.scss
@@ -9,6 +9,7 @@ $oil         : #333333;
 $black       : #000000;
 
 $bethel-purple: #8B3A7E;
+$bethel-purple-1: #A8619D;
 $bethel-green: #6EBE6E;
 $bethel-red: #C55252;
 
@@ -32,7 +33,7 @@ $oxbow-colors: (
 $site-colors: (
   header: $bethel-purple,
   body: white,
-  footer: $bethel-red,
+  footer: $bethel-purple-1,
 
   menu: transparent,
   menu-text: white,
