--- a/web/themes/starter/sass/global/_helpers.scss
+++ b/web/themes/starter/sass/global/_helpers.scss
@@ -26,6 +26,13 @@
   user-select: none;
 }
 
+/// Hide Link Borders
+.no-border {
+  a {
+    border-bottom: none !important;
+  }
+}
+
 
 
 //////////////
