--- a/web/themes/starter/css/screen.css
+++ b/web/themes/starter/css/screen.css
@@ -2087,14 +2087,14 @@ h6 {
 }
 /* line 317, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a {
-  color: #6EBE6E;
+  color: #548395;
   text-decoration: none;
   line-height: inherit;
   cursor: pointer;
 }
 /* line 323, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a:hover, a:focus {
-  color: #51b151;
+  color: #487180;
 }
 /* line 331, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a img {
@@ -3685,7 +3685,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: #6EBE6E transparent transparent;
+  border-color: #548395 transparent transparent;
   border-top-style: solid;
   border-bottom-width: 0;
   right: 5px;
@@ -3725,7 +3725,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent #6EBE6E transparent transparent;
+  border-color: transparent #548395 transparent transparent;
   border-right-style: solid;
   border-left-width: 0;
 }
@@ -3736,7 +3736,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #6EBE6E;
+  border-color: transparent transparent transparent #548395;
   border-left-style: solid;
   border-right-width: 0;
 }
@@ -3765,7 +3765,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #6EBE6E transparent transparent;
+    border-color: #548395 transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -3797,7 +3797,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #6EBE6E transparent transparent;
+    border-color: transparent #548395 transparent transparent;
     border-right-style: solid;
     border-left-width: 0;
   }
@@ -3808,7 +3808,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #6EBE6E;
+    border-color: transparent transparent transparent #548395;
     border-left-style: solid;
     border-right-width: 0;
   }
@@ -3838,7 +3838,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #6EBE6E transparent transparent;
+    border-color: #548395 transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -3870,7 +3870,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #6EBE6E transparent transparent;
+    border-color: transparent #548395 transparent transparent;
     border-right-style: solid;
     border-left-width: 0;
   }
@@ -3881,7 +3881,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #6EBE6E;
+    border-color: transparent transparent transparent #548395;
     border-left-style: solid;
     border-right-width: 0;
   }
@@ -3952,7 +3952,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent #6EBE6E transparent transparent;
+  border-color: transparent #548395 transparent transparent;
   border-right-style: solid;
   border-left-width: 0;
 }
@@ -3963,7 +3963,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #6EBE6E;
+  border-color: transparent transparent transparent #548395;
   border-left-style: solid;
   border-right-width: 0;
 }
@@ -5471,6 +5471,11 @@ table.hover tbody tr:nth-of-type(even):hover {
   user-select: none;
 }
 
+/* line 31, ../sass/global/_helpers.scss */
+.no-border a {
+  border-bottom: none !important;
+}
+
 /* line 5, ../sass/layout/_layout.scss */
 html, body {
   height: 100%;
@@ -5703,7 +5708,7 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #6EBE6E;
+  background-color: #548395;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5720,7 +5725,7 @@ table caption {
 .button-default:hover, .button-default:focus,
 .button-primary:hover,
 .button-primary:focus {
-  background-color: #4aa64a;
+  background-color: #436977;
   color: white;
 }
 
@@ -5770,10 +5775,10 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #C55252;
-  color: white;
+  background-color: #C0C2B8;
+  color: #555555;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
-  color: white !important;
+  color: #555555 !important;
   padding: 0.75rem;
   margin-bottom: 0;
   border-bottom: none !important;
@@ -5784,8 +5789,8 @@ table caption {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .button-tertiary:hover, .button-tertiary:focus {
-  background-color: #a73838;
-  color: white;
+  background-color: #9c9f8f;
+  color: #555555;
 }
 
 /* line 56, ../sass/components/buttons/_buttons.scss */
@@ -5802,8 +5807,8 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  border: 1px solid #6EBE6E;
-  color: #6EBE6E;
+  border: 1px solid #548395;
+  color: #548395;
   padding: 0.75rem;
   margin-bottom: 0;
 }
@@ -5817,8 +5822,8 @@ table caption {
 }
 /* line 144, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .button-outline:hover, .button-outline:focus {
-  border-color: #2e682e;
-  color: #2e682e;
+  border-color: #2a424b;
+  color: #2a424b;
 }
 
 /* line 17, ../sass/components/forms/_forms.scss */
@@ -5835,7 +5840,7 @@ form .form-submit {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #6EBE6E;
+  background-color: #548395;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5848,7 +5853,7 @@ form .form-submit {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 form .form-submit:hover, form .form-submit:focus {
-  background-color: #4aa64a;
+  background-color: #436977;
   color: white;
 }
 /* line 29, ../sass/components/forms/_forms.scss */
@@ -6029,7 +6034,7 @@ form .form-item.webform-component-time .form-radios {
 .form-type-number input:valid:not(.is-empty) ~ label {
   top: 0;
   font-size: .6em;
-  color: #6EBE6E;
+  color: #548395;
 }
 /* line 187, ../sass/components/forms/_forms.scss */
 .form-type-textfield .form-bar:before,
@@ -6045,7 +6050,7 @@ form .form-item.webform-component-time .form-radios {
   top: 3rem;
   height: 2px;
   width: 0;
-  background: #6EBE6E;
+  background: #548395;
   transition: all .3s;
 }
 /* line 197, ../sass/components/forms/_forms.scss */
@@ -6111,7 +6116,7 @@ form .form-item.webform-component-time .form-radios {
   position: relative;
   top: -1000px;
 }
-/* line 65, ../sass/global/_helpers.scss */
+/* line 72, ../sass/global/_helpers.scss */
 #block-starter-main-menu > ul:after {
   content: "";
   display: table;
@@ -6158,7 +6163,7 @@ form .form-item.webform-component-time .form-radios {
   margin-left: -0.75rem;
   margin-top: 5px;
   transform: rotate(45deg);
-  background: #6EBE6E;
+  background: #548395;
 }
 /* line 54, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li ul {
@@ -6166,10 +6171,10 @@ form .form-item.webform-component-time .form-radios {
   position: absolute;
   top: 100%;
   left: 50%;
-  min-width: 6.25rem;
+  min-width: 9.375rem;
   transform: translateX(-50%);
   margin: 0;
-  background-color: #6EBE6E;
+  background-color: #548395;
   margin-top: 0.75rem;
 }
 /* line 66, ../sass/components/menu/_menu--desktop.scss */
@@ -6191,18 +6196,19 @@ form .form-item.webform-component-time .form-radios {
 }
 /* line 81, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li ul li a:hover {
-  background: #459a45;
-}
-/* line 85, ../sass/components/menu/_menu--desktop.scss */
-#block-starter-main-menu > ul > li ul li a.is-active {
-  background: #3d893d;
+  background: #007178;
   color: white;
 }
-/* line 93, ../sass/components/menu/_menu--desktop.scss */
+/* line 86, ../sass/components/menu/_menu--desktop.scss */
+#block-starter-main-menu > ul > li ul li a.is-active {
+  background: #4b7585;
+  color: white;
+}
+/* line 94, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li.open > ul {
   display: block;
 }
-/* line 100, ../sass/components/menu/_menu--desktop.scss */
+/* line 101, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu .mobile-menu-button {
   display: none;
   position: absolute;
@@ -6212,11 +6218,11 @@ form .form-item.webform-component-time .form-radios {
   font-size: 2.5rem;
   cursor: pointer;
 }
-/* line 109, ../sass/components/menu/_menu--desktop.scss */
+/* line 110, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu .mobile-menu-button.open {
   font-size: 0;
 }
-/* line 112, ../sass/components/menu/_menu--desktop.scss */
+/* line 113, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu .mobile-menu-button.open:after {
   content: '×';
   position: absolute;
@@ -6229,12 +6235,12 @@ form .form-item.webform-component-time .form-radios {
   cursor: pointer;
 }
 
-/* line 128, ../sass/components/menu/_menu--desktop.scss */
+/* line 129, ../sass/components/menu/_menu--desktop.scss */
 .show-desktop #block-starter-main-menu > ul {
   position: static;
 }
 
-/* line 134, ../sass/components/menu/_menu--desktop.scss */
+/* line 135, ../sass/components/menu/_menu--desktop.scss */
 .show-mobile #block-starter-main-menu .mobile-menu-button {
   display: block;
 }
@@ -6705,7 +6711,7 @@ body.path-user .field--name-user-picture {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #6EBE6E;
+  background-color: #548395;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -6718,7 +6724,7 @@ body.path-user .field--name-user-picture {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .node.node--view-mode-teaser .links .node-readmore a:hover, .node.node--view-mode-teaser .links .node-readmore a:focus {
-  background-color: #4aa64a;
+  background-color: #436977;
   color: white;
 }
 
