--- a/web/themes/starter/sass/components/menu/_menu--desktop.scss
+++ b/web/themes/starter/sass/components/menu/_menu--desktop.scss
@@ -56,7 +56,7 @@ $arrow-w: padding(m);
         position: absolute;
         top: 100%;
         left: 50%;
-        min-width: rem-calc(100);
+        min-width: rem-calc(150);
         transform: translateX(-50%);
         margin: 0;
         background-color: color(menu-child);
@@ -80,6 +80,7 @@ $arrow-w: padding(m);
 
             &:hover {
               background: color(menu-child-hover);
+              color: color(menu-child-text-hover);
             }
             
             &.is-active {
