--- a/web/themes/starter/sass/global/_colors.scss
+++ b/web/themes/starter/sass/global/_colors.scss
@@ -37,7 +37,7 @@ $oxbow-colors: (
 $site-colors: (
   header: $bethel-purple,
   body: white,
-  footer: $bethel-purple-1,
+  footer: $bethel-blue,
 
   menu: transparent,
   menu-text: white,
