--- a/web/themes/starter/sass/global/_colors.scss
+++ b/web/themes/starter/sass/global/_colors.scss
@@ -39,6 +39,9 @@ $site-colors: (
   body: white,
   footer: $bethel-blue,
 
+  header-text: white,
+  footer-text: rgba(white, .5),
+
   menu: transparent,
   menu-text: white,
 
