--- a/web/themes/starter/sass/layout/_footer.scss
+++ b/web/themes/starter/sass/layout/_footer.scss
@@ -10,6 +10,7 @@
   #block-copyrightblock {
     text-align: center;
     font-size: .8em;
+    color: color(footer-text);
 
     * {
       color: lighten(color(footer), 20%);
