adjust primary color

--- a/web/themes/starter/css/screen.css
+++ b/web/themes/starter/css/screen.css
@@ -2087,14 +2087,14 @@ h6 {
 }
 /* line 317, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a {
-  color: #548395;
+  color: #007178;
   text-decoration: none;
   line-height: inherit;
   cursor: pointer;
 }
 /* line 323, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a:hover, a:focus {
-  color: #487180;
+  color: #006167;
 }
 /* line 331, ../foundation/bower_components/foundation-sites/scss/typography/_base.scss */
 a img {
@@ -3685,7 +3685,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: #548395 transparent transparent;
+  border-color: #007178 transparent transparent;
   border-top-style: solid;
   border-bottom-width: 0;
   right: 5px;
@@ -3725,7 +3725,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent #548395 transparent transparent;
+  border-color: transparent #007178 transparent transparent;
   border-right-style: solid;
   border-left-width: 0;
 }
@@ -3736,7 +3736,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #548395;
+  border-color: transparent transparent transparent #007178;
   border-left-style: solid;
   border-right-width: 0;
 }
@@ -3765,7 +3765,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #548395 transparent transparent;
+    border-color: #007178 transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -3797,7 +3797,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #548395 transparent transparent;
+    border-color: transparent #007178 transparent transparent;
     border-right-style: solid;
     border-left-width: 0;
   }
@@ -3808,7 +3808,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #548395;
+    border-color: transparent transparent transparent #007178;
     border-left-style: solid;
     border-right-width: 0;
   }
@@ -3838,7 +3838,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #548395 transparent transparent;
+    border-color: #007178 transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -3870,7 +3870,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #548395 transparent transparent;
+    border-color: transparent #007178 transparent transparent;
     border-right-style: solid;
     border-left-width: 0;
   }
@@ -3881,7 +3881,7 @@ select[multiple] {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #548395;
+    border-color: transparent transparent transparent #007178;
     border-left-style: solid;
     border-right-width: 0;
   }
@@ -3952,7 +3952,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent #548395 transparent transparent;
+  border-color: transparent #007178 transparent transparent;
   border-right-style: solid;
   border-left-width: 0;
 }
@@ -3963,7 +3963,7 @@ select[multiple] {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #548395;
+  border-color: transparent transparent transparent #007178;
   border-left-style: solid;
   border-right-width: 0;
 }
@@ -5709,7 +5709,7 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #548395;
+  background-color: #007178;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5726,7 +5726,7 @@ table caption {
 .button-default:hover, .button-default:focus,
 .button-primary:hover,
 .button-primary:focus {
-  background-color: #436977;
+  background-color: #005a60;
   color: white;
 }
 
@@ -5808,8 +5808,8 @@ table caption {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  border: 1px solid #548395;
-  color: #548395;
+  border: 1px solid #007178;
+  color: #007178;
   padding: 0.75rem;
   margin-bottom: 0;
 }
@@ -5823,8 +5823,8 @@ table caption {
 }
 /* line 144, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .button-outline:hover, .button-outline:focus {
-  border-color: #2a424b;
-  color: #2a424b;
+  border-color: #00393c;
+  color: #00393c;
 }
 
 /* line 17, ../sass/components/forms/_forms.scss */
@@ -5841,7 +5841,7 @@ form .form-submit {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #548395;
+  background-color: #007178;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -5854,7 +5854,7 @@ form .form-submit {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 form .form-submit:hover, form .form-submit:focus {
-  background-color: #436977;
+  background-color: #005a60;
   color: white;
 }
 /* line 29, ../sass/components/forms/_forms.scss */
@@ -6035,7 +6035,7 @@ form .form-item.webform-component-time .form-radios {
 .form-type-number input:valid:not(.is-empty) ~ label {
   top: 0;
   font-size: .6em;
-  color: #548395;
+  color: #007178;
 }
 /* line 187, ../sass/components/forms/_forms.scss */
 .form-type-textfield .form-bar:before,
@@ -6051,7 +6051,7 @@ form .form-item.webform-component-time .form-radios {
   top: 3rem;
   height: 2px;
   width: 0;
-  background: #548395;
+  background: #007178;
   transition: all .3s;
 }
 /* line 197, ../sass/components/forms/_forms.scss */
@@ -6712,7 +6712,7 @@ body.path-user .field--name-user-picture {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #548395;
+  background-color: #007178;
   color: white;
   box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.25);
   color: white !important;
@@ -6725,7 +6725,7 @@ body.path-user .field--name-user-picture {
 }
 /* line 121, ../foundation/bower_components/foundation-sites/scss/components/_button.scss */
 .node.node--view-mode-teaser .links .node-readmore a:hover, .node.node--view-mode-teaser .links .node-readmore a:focus {
-  background-color: #436977;
+  background-color: #005a60;
   color: white;
 }
 
