--- a/web/themes/starter/sass/global/_colors.scss
+++ b/web/themes/starter/sass/global/_colors.scss
@@ -18,7 +18,7 @@ $bethel-green: #6EBE6E;
 $bethel-red: #C55252;
 
 $foundation-palette: (
-  primary: $bethel-blue-1,
+  primary: $bethel-blue,
   secondary: hotpink,
   success: #3fbc4b,
   warning: #ffae00,
