--- a/web/themes/starter/sass/screen.scss
+++ b/web/themes/starter/sass/screen.scss
@@ -54,5 +54,6 @@
 @import "components/node/node--content-page";
 
 @import "components/view/view";
+@import "components/view/view--articles";
 
 @import "components/paragraphs/paragraphs";
