--- a/web/themes/starter/css/screen.css
+++ b/web/themes/starter/css/screen.css
@@ -6164,7 +6164,7 @@ form .form-item.webform-component-time .form-radios {
   margin-left: -0.75rem;
   margin-top: 5px;
   transform: rotate(45deg);
-  background: #548395;
+  background: #007178;
 }
 /* line 54, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li ul {
@@ -6175,7 +6175,7 @@ form .form-item.webform-component-time .form-radios {
   min-width: 9.375rem;
   transform: translateX(-50%);
   margin: 0;
-  background-color: #548395;
+  background-color: #007178;
   margin-top: 0.75rem;
 }
 /* line 66, ../sass/components/menu/_menu--desktop.scss */
@@ -6197,7 +6197,7 @@ form .form-item.webform-component-time .form-radios {
 }
 /* line 81, ../sass/components/menu/_menu--desktop.scss */
 #block-starter-main-menu > ul > li ul li a:hover {
-  background: #007178;
+  background: #548395;
   color: white;
 }
 /* line 86, ../sass/components/menu/_menu--desktop.scss */
@@ -6752,4 +6752,9 @@ body.page-node-type-content-page #content-main #block-starter-page-title h1 {
 /* line 6, ../sass/components/view/_view.scss */
 .view > .view-content .views-row {
   margin-bottom: 1.5rem;
+}
+
+/* line 13, ../sass/components/view/_view--articles.scss */
+.paragraph.view-background-true .views-row > .node {
+  padding: 1.5rem;
 }
