--- a/web/themes/starter/sass/layout/_footer.scss
+++ b/web/themes/starter/sass/layout/_footer.scss
@@ -1,10 +1,19 @@
 
 #footer {
   background: color(footer);
+  color: color(footer-text);
   
   > .layout-container {
     padding-top: padding(l);
     padding-bottom: padding(m);
+  }
+
+  #block-bethelfooter {
+    margin: padding(m) 0;
+
+    p:last-of-type {
+      margin-bottom: 0;
+    }
   }
 
   #block-copyrightblock {
@@ -17,6 +26,6 @@
     }
   }
   * + #block-copyrightblock {
-    margin-top: padding(m);
+    margin-top: padding(l);
   }
 }
