--- a/web/themes/starter/sass/global/_colors.scss
+++ b/web/themes/starter/sass/global/_colors.scss
@@ -52,7 +52,7 @@ $site-colors: (
   menu-child-text-hover: white,
   menu-child-text-active: white,
 
-  menu-mobile: $bethel-purple,
+  menu-mobile: $bethel-blue,
   menu-mobile-text: white,
 
   menu-footer-text: rgba(white, .8),
