--- a/web/modules/custom/oxbow_paragraphs/templates/_paragraphs--iframe.html.twig
+++ b/web/modules/custom/oxbow_paragraphs/templates/_paragraphs--iframe.html.twig
@@ -1,3 +1,3 @@
 <div class="field field--name-field-p-iframe">
-  <iframe src="{{ content.field_p_iframe_url['#items'].uri }}" height="{{ content.field_p_iframe_height['#items'].value }}"></iframe>
+  <iframe src="{{ content.field_p_iframe_url['#items'].uri }}" height="{{ content.field_p_iframe_height['#items'].value }}" frameborder="0"></iframe>
 </div>
